k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-app-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:654625399485:certificate/0ca8c8b9-0248-4ba4-b30e-edf775ab57f6
    alb.ingress.kubernetes.io/listen-ports: '[{ "HTTPS": 443 }]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-02b0c7a6010da9de1, sg-0885e7b643438b029, sg-0d46f5fb119123f5d, sg-0297d9183d6820297
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/tags: Environment=development,CreatedBy=AWS_LBC
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: producer.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: producer
            port:
              number: 8888
  - host: primary-consumer.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: primary-consumer-go
            port:
              number: 8000
  - host: blue-consumer.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-consumer-go
            port:
              number: 8001
  - host: orange-consumer.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orange-consumer-go
            port:
              number: 8002
  - host: error-consumer.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: error-consumer-go
            port:
              number: 8084
  - host: authorizer.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authorizer-go
            port:
              number: 8082
  - host: notifier.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notifier-go
            port:
              number: 8083
  - host: provisioner.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: provisioner-go
            port:
              number: 8081 
  - host: app.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-ui
            port:
              number: 80
  - host: kafka-ui.labdev1002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafbat-ui-kafka-ui
            port:
              number: 8080
